@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+  - 20-02-2005 fixed: Buttonscroller focus from another control didn't update background images correctly.
   - 20-02-2005 fixed: OSD crashes when filling listcontrols.
   - 20-02-2005 fixed: Noise level was not used correctly for video filters.
   - 20-02-2005 fixed: various info related things (eg music current pos could show negative times)
